=== 1.0.3 (unreleased)

* 1 Bugfix

  * Removed RARRAY_LEN for 1.8.5 compatibility.  Thanks Shane Hanna.

=== 1.0.2

* 1 Bugfix

  * extconf.rb should not check for frex and racc

=== 1.0.1

* 1 Bugfix

  * Made sure extconf.rb searched libdir and prefix so that ports libxml/ruby
    will link properly.  Thanks lucsky!

=== 1.0.0 / 2008-07-13

* 1 major enhancement

  * Birthday!
